--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>bangnana-vue</title>
+    <link rel="icon" href="/favicon.ico">
+    <title>BangnanaChips</title>
   </head>
   <body>
     <noscript>
@@ -14,4 +14,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 </html>
